--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ textarea {
   background: transparent;
   border: none;
   resize: none;
-  color: #000000;
-  border-left: 1px solid black;
+  color: #0e0e0e;
+  border-left: 1px solid rgb(0, 0, 0);
   padding: 10px;
 }
 
@@ -46,7 +46,8 @@ header {
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: rbg(186, 167, 23);
+
 }
 
 .present {
